# leiden-communities-openmp

./: CMakeLists.txt  main.cxx
inc/: _vector.hxx  csr.hxx  leiden.hxx  louvain.hxx  properties.hxx
